<resources>
    <string name="app_name">Bk Gym</string>
    <string name="continue_with_id_password">Continue with ID Password</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="signup">SignUp</string>
    <string name="don_t_have_an_account">Don\'t have an Account?</string>
    <string name="proceed_with_your">Proceed with your</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="back">Back</string>
    <string name="registration">Registration</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="signin">SignIn</string>
    <string name="register">Register</string>
    <string name="or_continue_with">Or Continue with</string>
    <string name="signout">Sign Out</string>


    <string name="todo">TODO</string>


    <string name="sign_out">Sign Out</string>
    <string name="accessGymAnywhere">Access Gym Anywhere</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="continuestr">Continue</string>
    <string name="add_your_profile_image">Add Your Profile Image</string>
    <string name="first_name">First Name</string>
    <string name="middle_name">Middle Name</string>
    <string name="last_name">Last Name</string>

    <string-array name="bloodGroups">
        <item name="a_positive_a">A positive (A+)</item>
        <item name="a_negative_a">A negative (A-)</item>
        <item name="b_positive_b">B positive (B+)</item>
        <item name="b_negative_b">B negative (B-)</item>
        <item name="o_positive_o">O positive (O+)</item>
        <item name="o_negati_ve_o">O negati ve (O-)</item>
        <item name="ab_positive_ab">AB positive (AB+)</item>
        <item name="ab_negative_ab">AB negative (AB-)</item>
    </string-array>

    <string name="blood_group">Blood Group</string>
    <string name="fill_your_details">Fill Your Details</string>
    <string name="pick_birthdate">Pick Birthdate</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="gender">Gender</string>
    <string name="guardian_optional">Guardian (Optional)</string>
    <string name="address">Address</string>
    <string name="blood_report_if_available">Blood Report if Available</string>
    <string name="pick_report">Pick Report</string>
    <string name="textview">TextView</string>
    <string name="branch">Branch</string>
    <string name="plans">Plans</string>
    <string name="view_current_plan">View Current Plan</string>
    <string name="view_all_plans">View All Plans</string>
    <string name="plans_bought_before">Plans Bought Before</string>
    <string name="rate_our_app_on_playstore">Rate Our App on PlayStore</string>
    <string name="rate">Rate</string>
    <string name="current_plan">Current Plan</string>
    <string name="you_are_not_gym_member_yet">You are not Gym Member Yet</string>
    <string name="become_a_member">Become a Member</string>
    <string name="selectBranch">Select Branch</string>
    <string name="select_your_branch">Select Your Branch</string>
    <string name="view_current_branch">View Current Branch</string>
    <string name="current_branch">Current Branch</string>
    <string name="change_your_current_branch">Change Your Current Branch</string>
    <string name="plan_name">Plan Name</string>
    <string name="description">Description</string>
    <string name="duration">Duration</string>
    <string name="_30">0</string>
    <string name="normal">Normal</string>
    <string name="report_any_issue">Report Any issue</string>
    <string name="report">Report</string>
    <string name="app">App</string>
    <string name="check_if_you_are_member_or_not">Check if you are member or not</string>
    <string name="refresh_member_status">Refresh Member Status</string>
    <string name="change_branch">Change Branch</string>
    <string name="history">History</string>
    <string name="products">Products</string>
    <string name="order_details">Order Details</string>
    <string name="type">Type</string>
    <string name="none">None</string>
    <string name="inr">INR</string>
    <string name="plan_details">Plan Details</string>
    <string name="order_info">Order Info</string>
    <string name="subtotal">Subtotal</string>
    <string name="total">Total</string>
    <string name="additional_charges_gst">Additional Charges/GST</string>
    <string name="forgot_password2">Forgot Password</string>
    <string name="product_name">Product Name</string>
    <string name="flavours">Flavours</string>
    <string name="pt">PT</string>
    <string name="view_your_current_orders">View Your Current Orders</string>
    <string name="your_orders">Your Orders</string>
    <string name="your_cart">Your Cart</string>
    <string name="price">Price</string>
    <string name="proceed_to_buy">Proceed to Buy</string>
    <string name="delete">Delete</string>
    <string name="category">Category</string>


    <string name="eligible_for_free_shipping">Eligible for FREE Shipping</string>
    <string name="title_activity_view_products_in_category">ViewProductsInCategory</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="add">Add</string>
    <string name="product_price">Product Price</string>
    <string name="product_description">Product Description</string>
    <string name="fill_the_details">Fill The Details</string>
    <string name="specify_your_order">Specify Your Order</string>
    <string name="checkout">Checkout</string>
    <string name="looks_like_you_haven_t_added_anything_to_your_cart_yet">Looks like you haven\'t added anything to Your Cart Yet</string>
    <string name="your_cart_is_empty">Your Cart is Empty</string>
    <string name="_0">0</string>
    <string name="products_quantity">Products Quantity</string>
    <string name="fees">Fees</string>
    <string name="plans_purchased_history">Plans Purchased History</string>
    <string name="view_plans_purchased_before">View Plans Purchased Before</string>
    <string name="products_available_at_bk_gym">Products available at Bk Gym</string>
    <string name="view_products">View Products</string>
    <string name="bought_date">Bought Date</string>
    <string name="okay">Okay</string>
    <string name="cancel">Cancel</string>
    <string name="your_orders_history">Your Orders History</string>
    <string name="delivery_status">Delivery Status</string>
</resources>