<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".fragments.datacollection.GymData">



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_your_branch"
        android:layout_marginTop="120dp"
        android:layout_marginStart="40dp"
        android:fontFamily="@font/montserratsemibold"
        android:textColor="@color/black"
        android:textAlignment="center"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/menuBranch"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:drawablePadding="12dp"
        app:hintEnabled="false">

        <AutoCompleteTextView
            android:id="@+id/branch_data"
            android:layout_width="match_parent"
            android:hint="@string/branch"
            android:fontFamily="@font/montserratsemibold"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_weight="1" />

    </com.google.android.material.textfield.TextInputLayout>



    <Button
        android:id="@+id/pickDateData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pick_birthdate"
        style="@style/Widget.MaterialComponents.Button"
        android:textAllCaps="false"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        />





    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:id="@+id/textViewBirthday"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gender"
        android:layout_marginTop="30dp"
        android:layout_marginStart="40dp"
        android:fontFamily="@font/montserratsemibold"
        android:textColor="@color/black"
        android:textAlignment="center"
        />

    <RadioGroup
        android:id="@+id/radioGroupGender"
        android:layout_marginTop="20dp"
        android:checkedButton="@id/radio_button_male"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/radio_button_male"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/male"/>
        <RadioButton
            android:id="@+id/radio_button_female"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/female"/>

    </RadioGroup>






    <include
        android:id="@+id/btn_continue_datastage2"
        layout="@layout/progress_btn_layout"
        android:layout_marginStart="40dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="40dp"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        />



</LinearLayout>