<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.CartActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <RelativeLayout
                android:id="@+id/go_back_Cart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"

                android:layout_marginStart="15dp"
                android:layout_marginTop="12dp">

                <ImageView
                    android:id="@+id/bk_img"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/ic_back" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="1dp"
                    android:layout_toEndOf="@+id/bk_img"
                    android:fontFamily="@font/montserratsemibold"
                    android:text="@string/back"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textColor="@color/black" />

            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:fontFamily="@font/montserratsemibold"
                android:text="@string/your_cart"
                android:textColor="@color/black" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/subtotaltext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/subtotal"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:textStyle="bold"
                android:layout_toEndOf="@id/subtotaltext"
                android:text="@string/price"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </RelativeLayout>


        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/btn_circular"
            android:text="@string/proceed_to_buy"
            android:textAllCaps="false"
            android:textColor="@color/white" />


    </LinearLayout>

</ScrollView>