<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    tools:context=".activities.GetBranch">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_your_branch"
        android:textColor="@color/black"
        android:fontFamily="@font/montserratsemibold"
        android:textSize="18sp"
        android:layout_margin="20dp"
        />
    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottieViewBranch"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/location" />

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar_branch"
        android:layout_gravity="center" />


<!---->


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/menuBranches"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/branch">

        <AutoCompleteTextView
            android:id="@+id/bottomAutoCompleteBranches"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/todo"
            android:inputType="none"
            tools:ignore="LabelFor" />

    </com.google.android.material.textfield.TextInputLayout>



    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/continueBranch"
        android:text="@string/continuestr"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="50dp"/>
</LinearLayout>