<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottom_sheet_Container"
    android:layout_width="match_parent"
    android:layout_height="300dp"
    android:background="@drawable/bottom_sheet_dialog"
    android:orientation="vertical">

    <TextView
        android:id="@+id/bottomSheetName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/montserratsemibold"
        android:text="@string/product_name"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/menuFlavours"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/flavours">

        <AutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/todo"
            android:inputType="text"
            tools:ignore="LabelFor" />

    </com.google.android.material.textfield.TextInputLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/background_cart"
            android:layout_marginStart="20dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_margin="10dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/outline_remove_24" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/_30"
                android:textSize="16sp"
                android:textColor="@color/black" />


            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_margin="10dp"
                android:src="@drawable/outline_add_24" />

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/AddToCart"
            android:text="@string/add"
            android:background="@drawable/btn_circular"
            android:textColor="@color/white"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="20dp"
            />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="40dp"/>
</LinearLayout>