<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".activities.PlansHistory">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <RelativeLayout
            android:id="@+id/go_back_plans_his"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="15dp"
            android:layout_marginTop="12dp">

            <ImageView
                android:id="@+id/bk_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:contentDescription="@string/todo"
                android:src="@drawable/ic_back" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginStart="1dp"
                android:layout_toEndOf="@+id/bk_img"
                android:fontFamily="@font/montserratsemibold"
                android:text="@string/back"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/black" />

        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/montserratsemibold"
            android:text="@string/plans_purchased_history"
            android:textColor="@color/black" />

    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/recyclerViewPlansHistory"
        android:layout_margin="10dp" />

</LinearLayout>