<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".auth.ForgotPassword"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <RelativeLayout
            android:id="@+id/go_back_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="15dp"
            android:layout_marginTop="12dp">

            <ImageView
                android:id="@+id/bk_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:contentDescription="@string/todo"
                android:src="@drawable/ic_back" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="1dp"
                android:layout_toEndOf="@+id/bk_img"
                android:fontFamily="@font/montserratsemibold"
                android:text="@string/back"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/black" />

        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/montserratsemibold"
            android:text="@string/forgot_password2"
            android:textColor="@color/black" />

    </RelativeLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:fontFamily="@font/montserratregular"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:hint="@string/email"
        android:textAllCaps="false"
        android:layout_marginTop="40dp"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/emailEditPass"
            android:inputType="textEmailAddress"
            android:drawableStart="@drawable/ic_email"
            android:drawablePadding="10dp"
            android:fontFamily="@font/montserratsemibold"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_for_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/btn_circular"
        android:fontFamily="@font/montserratsemibold"
        android:text="Reset"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp" />


</LinearLayout>